--- a/web/templates/layout/application.html.eex
+++ b/web/templates/layout/application.html.eex
@@ -9,7 +9,6 @@
 
     <title>Hello Phoenix!</title>
     <link rel="stylesheet" href="/css/app.css">
-    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   </head>
 
   <body>
@@ -17,4 +16,8 @@
       <%= @inner %>
     </div> <!-- /container -->
   </body>
+  
+  <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.7.0/underscore-min.js"></script>
+  <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/vue/0.10.6/vue.min.js"></script>
+  <script type="text/javascript" src="/js/main.js"></script>
 </html>
