--- a/web/templates/layout/application.html.eex
+++ b/web/templates/layout/application.html.eex
@@ -9,6 +9,8 @@
 
     <title>Hello Phoenix!</title>
     <link rel="stylesheet" href="/css/app.css">
+
+    <link rel="stylesheet" href="/css/cart.css">    
   </head>
 
   <body>
